--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <script src='./scripts/sqljs/sql-wasm.js'></script>
+      <script src='./scripts/sqljs/readSql.js'></script>
+      <script src='./scripts/serverSideConfigure.js'></script>
+
     <title>React App</title>
   </head>
-  <body>
+    <body style="background-color: #303030; margin: 0px; ">
+    <!-- <body > -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
