--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <script src='./scripts/sqljs/readSql.js'></script>
   <script src='./scripts/serverSideConfigure.js'></script>
 
-  <title>React App</title>
+  <title>EXViewer</title>
 </head>
 
 <body style="margin: 0px;">
