添加了zip导入功能
现在可以将画廊压缩包填写原始URL后导入下载

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <script src='./scripts/sqljs/sql-wasm.js'></script>
-  <script src='./scripts/sqljs/readSql.js'></script>
+  <!-- <script src='./scripts/sqljs/sql-wasm.js'></script>
+  <script src='./scripts/sqljs/readSql.js'></script> -->
   <script src='./scripts/serverSideConfigure.js'></script>
 
   <title>EXViewer</title>
